Fix missing reivew changes for JDK-8065972

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b43

        When pushing the fix for JDK-8065972 I used the patch file from the latest webrev. But unfortunately there is a bug in the webrev tool that does not produce the correct patch file when you have more than one commit in the repo. I had stored the review comments as mq patches in the repo, so those were not included in the patch I pushed.

        Will use this bug ID to push the changes that was suggested during the review process to make sure that the final change is what was reviewed on the mailing list.

              Assignee:
              Bengt Rutisson (Inactive)
              Reporter:
              Bengt Rutisson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: