8066133: Fix missing reivew changes for JDK-8065972

Reviewed-by: mgerdin, stefank